--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Angular2 Webpack Starter by @gdi2290 from @AngularClass</title>
+  <title>Stamp Rally</title>
 
-  <meta name="description" content="Angular2 Webpack Starter by @gdi2290 from @AngularClass">
+  <meta name="description" content="Stamp Rally">
 
   
   <!-- Configured Head Tags  -->
@@ -57,5 +57,5 @@
 
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-<script type="text/javascript" src="/stamp-rally/polyfills.f06aea690aed8169647a.bundle.js"></script><script type="text/javascript" src="/stamp-rally/vendor.d4c771f470ea8e60c45b.bundle.js"></script><script type="text/javascript" src="/stamp-rally/main.5e123aa65558d0305d7e.bundle.js"></script></body>
+<script type="text/javascript" src="/stamp-rally/polyfills.f06aea690aed8169647a.bundle.js"></script><script type="text/javascript" src="/stamp-rally/vendor.3d20be1b7d5c28308030.bundle.js"></script><script type="text/javascript" src="/stamp-rally/main.16e2e637be93170739f3.bundle.js"></script></body>
 </html>
